--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ nav ul li a {
     background-image: url('hero-section.jpg');
     background-size: cover;
     background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
 }
 
 .hero input {
@@ -67,7 +71,7 @@ nav ul li a {
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 15px;
     padding: 20px;
 }
@@ -78,7 +82,74 @@ nav ul li a {
     display: block;
     border-radius: 10px;
 }
+.item{
+    background: white;
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.menu-foot{
+    display: flex;
+    flex-direction: column;
+    background: white;
+}
+.menu-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:80px;
+}
+.menu-info{
+    /* display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:80px; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
 
+}
+.rating-time {
+    display: flex;
+    gap: 10px;
+}
+.rating, .time {
+    background: #000;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.rating::before {
+    content: "★";
+    color: gold;
+}
+.add-btn {
+    background: yellow;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    color: white;
+}
+/* .menu-info-left{
+    display: flex;  
+    gap:10px;
+} */
 .request-dish {
     text-align: center;
     padding: 20px;
